--- a/index.html
+++ b/index.html
@@ -7,17 +7,48 @@
 		* {
 			margin: 0;
 			padding: 0;
+			font-family: sans-serif;
+			text-rendering: optimizeLegibility;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
 		} 
-		#container {
+		.html-content {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		.html-content > h1 {
+			margin: 70px 0 30px 0;
+			text-transform: capitalize;
+			font-weight: lighter;
+		}	
+		.html-content > img {
+			margin: 20px auto;
+			max-width: 350px;
+			border: 3px solid red;
+			opacity: 0;
+		}
+		#container{
+			z-index: -1;
+			position: fixed;
+			top: 0;
+			left: 0;
 			height: 100vh;
 			width: 100vw;
-		}
-		canvas {
-			display: block;
 		}
     </style>
 </head>
 <body>
+	<div class="html-content">
+		<h1>Hello world</h1>
+		<img src="./img/1.jpg" alt="image">
+		<h1>Lorem Ipsum</h1>
+		<img src="./img/2.jpg" alt="image">
+		<h1>Lorem Ipsum</h1>
+		<img src="./img/3.jpg" alt="image">
+		<h1>Lorem Ipsum</h1>
+		<img src="./img/4.jpg" alt="image">
+	</div>
 	<div id="container"></div>
 	<script src="js/app.js"></script>
 </body>
