--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 			border: 3px solid red;
 			opacity: 0;
 		}
+		.html-content > img:hover {
+			cursor: pointer;
+		}
 		#container{
 			z-index: -1;
 			position: fixed;
