--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
 		} 
+		body {
+			background-color: black;
+			color: white;
+		}
 		.html-content {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 		}
 		.html-content > h1 {
-			margin: 70px 0 30px 0;
+			margin: 70px 0 25px 0;
 			text-transform: capitalize;
 			font-weight: lighter;
 		}	
@@ -43,13 +47,13 @@
 <body>
 	<div class="html-content">
 		<h1>Hello world</h1>
-		<img src="./img/1.jpg" alt="image">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/PSM_V77_D421_Handwritten_note_of_william_james_concerning_his_health.png" alt="image" crossorigin="anonymous">
 		<h1>Lorem Ipsum</h1>
-		<img src="./img/2.jpg" alt="image">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/PSM_V77_D421_Handwritten_note_of_william_james_concerning_his_health.png" alt="image" crossorigin="anonymous">
 		<h1>Lorem Ipsum</h1>
-		<img src="./img/3.jpg" alt="image">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/PSM_V77_D421_Handwritten_note_of_william_james_concerning_his_health.png" alt="image" crossorigin="anonymous">
 		<h1>Lorem Ipsum</h1>
-		<img src="./img/4.jpg" alt="image">
+		<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/PSM_V77_D421_Handwritten_note_of_william_james_concerning_his_health.png" alt="image" crossorigin="anonymous">
 	</div>
 	<div id="container"></div>
 	<script src="js/app.js"></script>
